<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.musicappstructure.StartActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            style="@style/table_row"
            android:onClick="play">

            <ImageView
                style="@style/menu_image_row"
                android:src="@drawable/play" />

            <TextView
                style="@style/menu_text_row"
                android:text="@string/play_now" />

            <ImageView
                style="@style/menu_image_row"
                android:src="@drawable/play" />
        </TableRow>

        <TableRow
            style="@style/table_row"
            android:onClick="music">

            <ImageView
                style="@style/menu_image_row"
                android:src="@drawable/cdplay" />

            <TextView
                style="@style/menu_text_row"
                android:text="@string/my_music" />

            <ImageView
                style="@style/menu_image_row"
                android:src="@drawable/cdplay" />
        </TableRow>


        <TableRow
            style="@style/table_row"
            android:onClick="list">

            <ImageView
                style="@style/menu_image_row"
                android:src="@drawable/playlist" />

            <TextView
                style="@style/menu_text_row"
                android:text="@string/playlist" />

            <ImageView
                style="@style/menu_image_row"
                android:src="@drawable/playlist" />
        </TableRow>

        <TableRow
            style="@style/table_row"
            android:onClick="settings">

            <ImageView
                style="@style/menu_image_row"
                android:src="@drawable/buy" />

            <TextView
                style="@style/menu_text_row"
                android:text="@string/payment" />

            <ImageView
                style="@style/menu_image_row"
                android:src="@drawable/buy" />
        </TableRow>

        <TableRow
            style="@style/table_row"
            android:onClick="settings">

            <TextView
                style="@style/menu_text_row"
                android:text="@string/menu_message" />
        </TableRow>
    </TableLayout>

</LinearLayout>