<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/song_page_padding_5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/song_page_padding_5"
            android:text="@string/play_message" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/song_page_padding"
        android:layout_weight="0.68">

        <Button
            android:id="@+id/menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/menu"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Button
            android:id="@+id/list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/playlist"
            android:textAlignment="center"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/exit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/back"
            android:textAlignment="center"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <ImageView
            android:id="@+id/album"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:onClick="music"
            android:padding="@dimen/song_page_padding_15"
            android:scaleType="fitCenter"
            android:src="@drawable/ariana" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/song_page_padding_5"
        android:layout_weight="1"
        android:padding="@dimen/song_page_padding_5">

        <ImageButton
            android:id="@+id/mpreviouss"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="@dimen/song_page_padding"
            android:src="@drawable/prev" />

        <ImageButton
            android:id="@+id/pausem"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="@dimen/song_page_padding_5"
            android:src="@drawable/pause" />

        <ImageButton
            android:id="@+id/playm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="@dimen/song_page_padding_2"
            android:src="@drawable/play_song" />

        <ImageButton
            android:id="@+id/stopm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="@dimen/song_page_padding_5"
            android:src="@drawable/stop" />

        <ImageButton
            android:id="@+id/mnexts"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="@dimen/song_page_padding"
            android:src="@drawable/next" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4" />

    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/song_page_padding">

        <TextView
            android:id="@+id/listsong"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/name_songs_play"
            android:textAlignment="center"
            android:textSize="@dimen/song_name_text_size" />

    </LinearLayout>
</LinearLayout>